syntax = "proto3";

package dash.appliance;

import "types.proto";

message Appliance {
    // source ip address, to be used in encap
    types.IpAddress sip = 1;
    // VM VNI that is used for setting direction. Also used for inbound encap to VM
    uint32 vm_vni = 2;
    // region where this appliance is located
    uint32 local_region_id = 3;
    // outbound direction lookup. Must be either "dst_mac" or "src_mac"
    optional string outbound_direction_lookup = 4;
    optional types.ValueOrRange trusted_vnis = 5;
}

message ApplianceKey {
    // Attributes specific for the appliance
    string appliance_id = 1;
}
